@@ -8,7 +8,6 @@
 % See the original file for details about author, licence etc.
 %
 \patterns{
-2'2
 .a2b3l
 .anti1
 .anti3m2n
