@@ -12,7 +12,6 @@
 % these lines may be moved to a separate file.
 %
 \begingroup
-\lccode`\'=`\'
 % Test whether we received one or two arguments
 \def\testengine#1#2!{\def\secondarg{#2}}
 % That's Tau (as in Taco or ΤΕΧ, Tau-Epsilon-Chi), a 2-byte UTF-8 character
