@@ -95,13 +95,14 @@ Latin Hyphenation Patterns
 % Bernd Raichle using the macro code from `dehypht.tex' (this code
 % is Copyright 1993,1994,1998,1999 Bernd Raichle/DANTE e.V.).
 %
+% 2010/06/01 Removal of pattern 2'2 (probably a leftover from Italian)
 %
-% \versionnumber{3.1}   \versiondate{2007/04/16}
+% \versionnumber{3.2}   \versiondate{2010/06/01}
 %
 % Information after \endinput.
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-% \message{Latin Hyphenation Patterns `lahyph' Version 3.1 <2007/04/16>}
+% \message{Latin Hyphenation Patterns `lahyph' Version 3.2 <2010/06/01>}
 %
 %
