@@ -1,4 +1,3 @@
-2’2
 .a2b3l
 .anti1
 .anti3m2n
